--- a/views/companiesPage.pug
+++ b/views/companiesPage.pug
@@ -18,7 +18,7 @@ block content
       +_secondmenu
     each post in hudldata
     
-          a.complist(href='https://sportekjobs.com/sports-companies/' + post['_id'])
+          a.complist(href='https://sportekjobs.com/sports-companies/' + post['company'])
           
               li.company= post['_id']
               //- li 
