--- a/views/companyInfo.pug
+++ b/views/companyInfo.pug
@@ -14,6 +14,7 @@ block content
       h1= post['copmany'] 
       div.companybox
         .companydescription 
+          p #{post}
           p!= post['companydescription']
           p!= post['descr']
         .companylinks
