--- a/views/hire.pug
+++ b/views/hire.pug
@@ -35,6 +35,8 @@ block content
                     input(type='text'  name='twitter')
                     label Facebook Profile
                     input(type='text'  name='facebook')
+                    label Linkedin Page Name
+                    input(type='text'  name='linkedin')
                     label Area of Work
                     select(name='areaofwork')
                       option(value='eSports') eSports
